fix layout broken issues

--- a/css/index.css
+++ b/css/index.css
@@ -59,17 +59,46 @@ aside.aside{
 
 
 
+
  section.left{
     display: flex;
     flex-direction: column;
     width:600px;
     height:700px;
     /* background-image:url("./img/tparty.jpg"); */
-    background-image: url(../img/tparty.png);
-    background-repeat: no-repeat;
+    /* background-image: url(../img/tparty.png); */
+    /* background-repeat: no-repeat; */
+    /* background-size:contain; */
     border:  1px solid black;
-    /* overflow: hidden; */
+    
 }
+
+
+
+
+
+
+#tparty img {
+    width:100%;
+    height:100%;
+    border: 1px solid blue;
+    /* object-fit:cover; */
+}
+
+
+
+#tdesc{
+    width:100%;
+    height:50%;
+    border: 1px deeppink;
+    background-color: black;
+}
+
+
+
+
+
+
 section.right{
     display: flex;
     flex-direction: column;
@@ -79,36 +108,106 @@ section.right{
     /* background-color: white; */
     opacity: .8;
     border: 5px deeppink;
-}
-#tparty{
-    width:600px;
-    height:400px;
-    border: 1px solid blue;
-
-}
-
-#tdesc{
-    width:600px;
-    height:300px;
-    border: 1px deeppink;
-    background-color: black;
+    padding: 5px;
 }
 
 
-.online{
+
+.h3title{
+    border:1px solid #BAA079;
+    padding: 0px 5px 0px 5px;
+    margin-bottom: 20px;
+}
+
+h3{
+    color:#BAA079;
+}
+
+
+mark{
+    background-color: white;
+}
+
+
+
+.flexline{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.flexline div{
+    color: #BAA079;
+   
+}
+
+input[type="text"]{
+    caret-color:#BAA079;
     border: 1px solid #BAA079;
+    outline:none;
+    padding:5px 15px;
+
+}
+
+.online3 > span{
     color: #BAA079;
 }
 
-input[type="text"]{padding:5px 15px; caret-color:#BAA079; color: #BAA079;
-    cursor:pointer; border: transparent; outline:none; 
+
+input[type="text1"]{
+    caret-color:#BAA079;
+    width: 100%;
+    border: 1px solid #BAA079;
+    outline:none;
+    margin-bottom: 20px; 
+    padding:5px 15px
+
+}
+
+input[type="submit"]{
+    
+    width: 100%;
+    border: 1px solid #BAA079;
+    outline:none;
+    color: #BAA079;
+    background-color: white;
+    font-size: 16px;
+    padding:2.5px 2.5px;
+    caret-color:#BAA079;
 }
 
 
 
-input[type="submit"]{padding:5px 15px; border:0 none; outline: none; color: #BAA079;
+
+/* 
+.online{
+    display: flex;
+    border: 1px solid #BAA079;
+    color: #BAA079;
+    
+}
+
+span
+
+.online > p{
+    border-left: 1px solid #BAA079;
+    margin: 0;
+    padding-top:4px;
+}
+
+{padding:5px 15px; caret-color:#BAA079; color: #BAA079;
+    cursor:pointer; outline: #BAA079; border: #BAA079;
+}
+input[type="text2"]{padding:5px 15px; caret-color:#BAA079; color: #BAA079;
+    cursor:pointer; outline:none; border: #BAA079;
+} */
+
+
+
+/* input[type="submit"]{padding:5px 15px; border:0 none; outline: none; color: #BAA079;
     cursor:pointer;
-}
+} */
 
 /* background:#BAA079; opacity: 0.5; */
 
@@ -176,6 +275,7 @@ div.parent_flex{
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding-bottom: 5vh;
         /* border: 1px solid black; */
     }
 /* 標題 */
@@ -189,23 +289,40 @@ div.parent_flex{
         border-right: 0px;
     }/* 標題 */
 
-/* 商品圖頁面縮小會往下排 */
+    /* 商品圖頁面縮小會往下排 */
     #featured{
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-    }/* 商品圖頁面縮小會往下排 */
+    }
+    /* 商品圖頁面縮小會往下排 */
+
+    #featured.container {
+        width: 100%;
+        max-width: 1300px;
+    }
+    #featured .fboxs {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        flex: 1 0 25%;
+        padding: 0 20px;
+    }
+    #featured .fboxs p {
+        margin-top: 0;
+    }
 
     .more_info{  /* 包住按鈕a的外框div與按鈕a重合 */
         margin-bottom: 10px;
         text-align: center;
-        padding: 5px 0px 5px 0px;
+        padding: 2.5px 0px 2.5px 0px;
         /* border: 1px solid #BAA079; */
     }
     
     .more_info > a{  /* 按鈕a */
         margin-bottom: 10px;
-        padding: 5px 25px 5px 25px;
+        padding: 2.5px 25px 2.5px 25px;
         text-decoration: none;
         border: 1px solid #BAA079;
         color: #BAA079;
@@ -264,7 +381,6 @@ footer.footer{
     /* border: 1px solid white; */
 }
 
-
  @media (max-width:820px){
     .warning{
         padding:15px;
@@ -281,11 +397,20 @@ footer.footer{
     .rights{
        padding: 15px;
        /* font-size: 13px; */
+       
    }
+   #featured .fboxs {
+        flex: 1 0 50%;
+    }
 }
 
 
- @media (max-width:544px){
+ @media (max-width:582px){
+
+    footer.footer{
+        width:100%;
+    }
+
     .warning{
         padding:8px;
         /* font-size: 13px; */
@@ -436,8 +561,9 @@ ul.optbar{
 
 ul.optbar > li{
     list-style: none;
-    border: 1px solid white;
+    border: 1px solid #d3b890;
     color: white;
+    margin-left: -2px;
 }
 
 ul.optbar li:hover{   
@@ -547,7 +673,9 @@ li.opt5{
     
     ul.optbar > li{
         list-style: none;
-        border: 1px solid white;
+        border: 1px solid #d3b890;
+        color: white;
+        margin-left: -2px;
     }
     
     ul.optbar > li:hover{   
@@ -658,7 +786,9 @@ li.opt5{
     
     ul.optbar > li{
         list-style: none;
-        border: 1px solid white;
+        border: 1px solid #d3b890;
+        color: white;
+        margin-left: -2px;
         
     }
     
@@ -770,7 +900,9 @@ li.opt5{
     
     ul.optbar > li{
         list-style: none;
-        border: 1px solid white;
+        border: 1px solid #d3b890;
+        color: white;
+        margin-left: -2px;
     }
     
     ul.optbar > li:hover{   
